[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/CustomPopup.gd" type="Script" id=1]

[node name="CustomPopup" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="." to="." method="_on_CustomPopup_pressed"]
